# CubeCL_gradient_triangle

./: Cargo.toml
examples/: wgsl_triangle.rs
src/: lib.rs  main.rs
src/sample_shader/: mod.rs
